# csc5290-term-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb
scripts/: csv_to_parquet.py
